fix font size issue on iphone landscape orientation

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -1117,6 +1117,9 @@ article {
 			&:nth-child(2n + 2) {
 				margin-right: 0;
 			}
+			h3 {
+				font-size: 0.875em;
+			}
 		}
 	}
 	@media screen and (min-width: $break-medium) and (max-width: $break-large) {
